tests/visual/snapshots/lib__visual__snapshots__error_message_display.snap
---
source: tests/visual/snapshots.rs
description: Error message displayed to user
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│Query Crafter - [1] Tables [2] Query [3] Results                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭[1] Tables────╮Query [t] History [t]                                           
│              │                                                                
│              │╭Query Editor - NORMAL─────────────────────────────────────────╮
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │╭Error─────────────────────────────────────────╮               │
│              ││Database connection failed: timeout           │               │
│              ││                                              │               │
│              │╰──────────────────────────────────────────────╯               │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │╰──────────────────────────────────────────────────────────────╯
╰──────────────╯╭[3] Results───────────────────────────────────────────────────╮
