tests/visual/snapshots/lib__visual__snapshots__initial_layout.snap
---
source: tests/visual/snapshots.rs
description: Initial empty layout with three panels
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│Query Crafter - [1] Tables [2] Query [3] Results                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭[1] Tables────╮Query [t] History [t]                                           
│              │                                                                
│              │╭Query Editor - NORMAL─────────────────────────────────────────╮
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │╰──────────────────────────────────────────────────────────────╯
╰──────────────╯╭[3] Results───────────────────────────────────────────────────╮
