tests/visual/snapshots/lib__visual__snapshots__long_results_scrolling.snap
---
source: tests/visual/snapshots.rs
description: Results panel showing scrolled view of long results
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│Query Crafter - [1] Tables [2] Query [3] Results                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭[1] Tables────╮Query [t] History [t]                                           
│              │                                                                
│              │╭Query Editor - NORMAL─────────────────────────────────────────╮
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │╰──────────────────────────────────────────────────────────────╯
╰──────────────╯╭[3] Results───────────────────────────────────────────────────╮
