tests/visual/snapshots/lib__visual__snapshots__query_focused.snap
---
source: tests/visual/snapshots.rs
description: Layout with query_focused component focused
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│Query Crafter - [1] Tables [2] Query [3] Results                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭[1] Tables────╮Query [t] History [t]                                           
│users         │                                                                
│posts         │╭Query Editor - NORMAL─────────────────────────────────────────╮
│comments      ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │╰──────────────────────────────────────────────────────────────╯
╰──────────────╯╭[3] Results───────────────────────────────────────────────────╮
