tests/visual/snapshots/lib__visual__snapshots__query_results_view.snap
---
source: tests/visual/snapshots.rs
description: Results panel showing query results in table format
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────╮
│Query Crafter - [1] Tables [2] Query [3] Results                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭[1] Tables────╮Query [t] History [t]                                           
│              │                                                                
│              │╭Query Editor - NORMAL─────────────────────────────────────────╮
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              │╰──────────────────────────────────────────────────────────────╯
╰──────────────╯╭[3] Results───────────────────────────────────────────────────╮
